--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utils-js",
+  "name": "utils",
   "version": "0.0.1",
   "main": "index.js",
   "author": "Pieter Heyvaert (https://pieterheyvaert.com)",
